# dvc-osf

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT_DESCRIPTION.md  README.md  configure-test-project-env.sh  dvc_osf_register.pth  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  tests.yml
docs/: TROUBLESHOOTING_FILE_OPERATIONS.md  configuration.md  development.md  installation.md
dvc_osf/: __init__.py  api.py  auth.py  config.py  exceptions.py  filesystem.py  utils.py
openspec/changes/archive/2026-02-13-initial-project-setup/: design.md  tasks.md
openspec/changes/archive/2026-02-13-initial-project-setup/specs/build-configuration/: spec.md
openspec/changes/archive/2026-02-13-initial-project-setup/specs/documentation-structure/: spec.md
openspec/changes/archive/2026-02-13-initial-project-setup/specs/git-configuration/: spec.md
openspec/changes/archive/2026-02-13-initial-project-setup/specs/package-structure/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/build-configuration/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/dependency-management/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/osf-api-client/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/osf-authentication/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/osf-error-handling/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/osf-filesystem-read/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/osf-path-handling/: spec.md
openspec/changes/archive/2026-02-14-osf-core-implementation/specs/package-structure/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-api-client/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-conflict-handling/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-error-handling/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-file-versioning/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-filesystem-read/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-filesystem-write/: spec.md
openspec/changes/archive/2026-02-15-osf-write-operations/specs/osf-upload-chunked/: spec.md
openspec/changes/implement-phase-4-file-manipulation-operations/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase-4-file-manipulation-operations/specs/: osf-api-client.md  osf-batch-operations.md  osf-error-handling.md  osf-filesystem-copy.md  osf-filesystem-delete.md  osf-filesystem-move.md
openspec/changes/implement-phase-5-dvc-plugin-integration/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase-5-dvc-plugin-integration/specs/dvc-command-integration/: spec.md
openspec/changes/implement-phase-5-dvc-plugin-integration/specs/dvc-remote-config/: spec.md
openspec/changes/implement-phase-5-dvc-plugin-integration/specs/entry-point-registration/: spec.md
openspec/changes/implement-phase-5-dvc-plugin-integration/specs/osf-authentication/: spec.md
openspec/changes/implement-phase-5-dvc-plugin-integration/specs/osf-path-handling/: spec.md
openspec/changes/initial-project-setup/: design.md  proposal.md
openspec/changes/initial-project-setup/specs/dependency-management/: spec.md
openspec/changes/initial-project-setup/specs/development-tooling/: spec.md
openspec/specs/build-configuration/: spec.md
openspec/specs/dependency-management/: spec.md
openspec/specs/osf-api-client/: spec.md
openspec/specs/osf-authentication/: spec.md
openspec/specs/osf-error-handling/: spec.md
openspec/specs/osf-filesystem-read/: spec.md
openspec/specs/osf-path-handling/: spec.md
openspec/specs/package-structure/: spec.md
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_dvc_integration.py  test_exceptions.py  test_filesystem.py  test_integration.py  test_utils.py
tests/fixtures/: osf_responses.py
tests/integration/: README.md  test_dvc_e2e.py  test_dvc_push_pull.py  test_osf_batch.py  test_osf_copy.py  test_osf_move.py  test_osf_read.py  test_osf_roundtrip.py  test_osf_write.py
