[project]
name = "dvc-osf"
description = "DVC plugin for Open Science Framework (OSF) remote storage"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "Apache-2.0"}
authors = [
    {name = "DVC-OSF Contributors", email = "support@dvc.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "dvc-objects>=5.0.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
cache = [
    "requests-cache>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/dvc-osf/dvc-osf"
Documentation = "https://github.com/dvc-osf/dvc-osf#readme"
Repository = "https://github.com/dvc-osf/dvc-osf"
Issues = "https://github.com/dvc-osf/dvc-osf/issues"

[project.entry-points."fsspec.specs"]
osf = "dvc_osf.filesystem:OSFFileSystem"

[project.entry-points."dvc.fs"]
osf = "dvc_osf.filesystem:OSFFileSystem"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dvc_osf*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "dvc_osf.__version__"}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dvc_objects.*",
    "fsspec.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "dvc-osf"
version = "0.1.0"
description = "DVC plugin for Open Science Framework (OSF) remote storage"
authors = ["DVC-OSF Contributors <support@dvc.org>"]
readme = "README.md"
license = "Apache-2.0"

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20241016",
]
